syntax = "proto3";

package kurtome.dote.proto.api.action;

import "api/dotable.proto";
import "api/common.proto";

message SearchRequest {
  string query = 1;
  int32 max_results = 2;
}

message SearchResponse {
  api.ActionStatus response_status = 1;
  repeated api.Dotable dotables = 2;
}